Updated header  * Renamed prop  * Fixed spacing  * Don’t output empty element

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -21,6 +21,7 @@
 
 	& .title {
 		float: left;
+		margin-bottom: 0;
 	}
 
 	& .navigation {
@@ -55,6 +56,7 @@
 
 .content-wrapper {
 	max-width: var(--content-width);
+	margin-top: 0.65rem;
 }
 
 .title {
